# Athena-yellow

./: .gitignore  DIKW.drawio  Overview.drawio  README.md  Untitled Diagram.drawio  client_pub-wait.py  communicationDiagram.drawio  context.py  poster_CSSE4011.pptx  pub.py  sub.py
GUI/: MyApp.py  capture_screen.py  capture_screen_tcp_client.py  capture_screen_tcp_client_qt.py  mdns_service.py  pyqt.py
GUI/resource/dark/: demo.qss
GUI/resource/light/: demo.qss
blue/: CMakeLists.txt  app.overlay  prj.conf
blue/src/: blecon.c  blecon.h  blescan.c  blescan.h  cmd.c  hci.c  hci.h  main.c  observer.c
config/: config.json
drawio/: DIKW.drawio  Overview.drawio
m5/: prj.conf
m5/src/: img_cogwheel_argb.c  lv_example_anim_3.c  lv_example_anim_3.h  main.c  pineapple2.c
m5_arduino/: m5_arduino.ino
m5_arduino/m5_ble/: m5_ble.ino
m5_arduino/m5_tcp_server/: m5_tcp_server.ino
m5_zephyr/: CMakeLists.txt  Kconfig  prj.conf
m5_zephyr/src/: main.c  server.c  server.h  wifi.c  wifi.h
